Add code format command (#622)
* First draft of format command

* adding onMessageDeleted to message receiver

* some stuff

* moved code formatting responsibility over to the message handler

* Draft of final UX

* Generify, support multiple commands

* signature after rebase, ignore bots

* some logging

* Caffeine cache

* cant do much about that duplication

* Improved code extraction, polished design, javadoc

* fixed bug where newlines are not matched

* Removed code-section feature (not needed)

* Improved tokens

* Got rid of line-wise lexing, improved patterns

* Improved matching to not solely rely on regex

* Improved lexer to use rolling window on string view

* Improved formatter interface

* Improved actual formatter engine, rules and queue

* patch multi line comments

* Adjusted tokenqueue to actual needs

* javadoc

* extract code tests, got rid of regex

* Expanded list of tokens

* unit tests for matching

* Lexer tests

* unit tests for tokenqueue

* formatting tests and bugfixes

* got rid of example duplication

* Added java as default language to always have syntax highlighting

* CR Tais